# SPEEDRUN

./: .gitignore  README.md  setup.sh
implant/: .clangd  Makefile
implant/inc/: .clangd  config.h  debug.h
implant/src/: .clangd  implant.cpp
speedrun/: Makefile  client.py  manage.py  populate_foo.py  pyproject.toml
speedrun/speedrun/: __main__.py  admin.py  app.py  build_app.py  demo.py  lp.py  models.py
